syntax = "proto3";

package cloudseal;
option csharp_namespace = "CloudSealCore.Grpc";

service CloudSeal {
  rpc Register       (AuthRequest)      returns (AuthResponse);
  rpc Login          (AuthRequest)      returns (AuthResponse);

  rpc UploadVault    (VaultRequest)     returns (Status);
  rpc DownloadVault  (VaultQuery)       returns (VaultResponse);

  rpc UploadFile     (FileTransferPath) returns (Status);
  rpc DownloadFile   (FileTransferPath) returns (Status);
  rpc ListFiles      (AuthToken)        returns (FileList);
  rpc GetStats       (AuthToken)        returns (GlobalStats);
}

// ───── Modele ─────

message CloudFile {
  string id = 1;
  string name = 2;
  string mime_type = 3;
  int64 size = 4;
  string created_time = 5; // RFC3339 ISO string (e.g. "2023-05-01T14:30:00Z")
  string source = 6;
}

message FileList {
  repeated CloudFile files = 1;
}

// ───── Autoryzacja ─────

message AuthRequest {
  string username = 1;
  string password = 2;
}

message AuthResponse {
  bool success = 1;
  string message = 2;
  string token = 3;
}

message AuthToken {
  string token = 1;
}

// ───── Vault ─────

message VaultRequest {
  string token = 1;
  string local_path = 2;
}

message VaultQuery {
  string token = 1;
}

message VaultResponse {
  string local_path = 1;
}

// ───── Przesyłanie plików ─────

message FileTransferPath {
  string token = 1;
  string remote_name = 2;
  string local_path = 3;
}

// ───── Statystyki ─────

message GlobalStats {
  int64 total = 1;
  int64 free  = 2;
}

message Status {
  bool success = 1;
  string message = 2;
}
